Add support for scss

--- a/src/app/frontend/chrome/template.html
+++ b/src/app/frontend/chrome/template.html
@@ -19,7 +19,7 @@ limitations under the License.
     <div class="kd-logo-bar">
       <a href="{{getOverviewStateName()}}"
          class="kd-toolbar-logo-link">
-        <mat-icon svgIcon="assets/images/kubernetes-logo.svg"
+        <mat-icon svgIcon="kd-logo"
                  class="kd-toolbar-logo">
         </mat-icon>
         <mat-icon svgIcon="assets/images/kubernetes-logo-text.svg"
