Make material icons work offline

--- a/src/app/frontend/chrome/template.html
+++ b/src/app/frontend/chrome/template.html
@@ -34,7 +34,7 @@ limitations under the License.
                 (click)="create()"
                 matTooltip="Create an application or any Kubernetes resource"
                 class="kd-actionbar-button">
-          <mat-icon svgIcon="add" class="kd-global-action-icon"></mat-icon>
+          <mat-icon class="kd-global-action-icon">add</mat-icon>
           <!--<mat-tooltip delay="500"-->
           <!--mat-autohide>-->
           <!--<div class="kd-actionbar-button-text">-->
