Add ui-router support and adjust main view

--- a/src/app/frontend/about/template.html
+++ b/src/app/frontend/about/template.html
@@ -26,7 +26,7 @@ limitations under the License.
     <div>Commit SHA:</div>
   </mat-card-content>
   <mat-card-footer class="mat-small kd-card-footer">
-    <div>Copyright 2015-{{$ctrl.latestCopyrightYear}} The Kubernetes Authors.</div>
+    <div>Copyright 2015-{{latestCopyrightYear}} The Kubernetes Authors.</div>
     <div>
       Kubernetes Dashboard is made possible by the Dashboard
       <a href="https://github.com/kubernetes/dashboard/graphs/contributors">community</a> as an
