--- a/src/app/frontend/index.html
+++ b/src/app/frontend/index.html
@@ -29,7 +29,7 @@ limitations under the License.
 </head>
 
 <body>
-  <kd-chrome></kd-chrome>
+  <ui-view>Loading...</ui-view>
 
   <!-- Script with configuration generated at backend. -->
   <script src="api/appConfig.json"></script>
