--- a/src/app/frontend/chrome/style.scss
+++ b/src/app/frontend/chrome/style.scss
@@ -22,6 +22,26 @@
   width: 4 * $baseline-grid;
 }
 
+.kd-toolbar {
+  background-color: $content-background;
+  color: $primary;
+  height: 6 * $baseline-grid;
+  min-height: 6 * $baseline-grid;
+  padding-left: 1.75 * $baseline-grid;
+}
+
+.kd-toolbar-tools {
+  align-items: center;
+  height: 6 * $baseline-grid;
+  margin: auto;
+  padding-left: $baseline-grid;
+}
+
+.kd-logo-bar {
+  flex: 1;
+  height: 4 * $baseline-grid;
+}
+
 .kd-toolbar-logo-link {
   .kd-toolbar-logo {
     @extend %kd-toolbar-logo-placeholder;
@@ -34,36 +54,20 @@
   }
 }
 
-.kd-middle-ellipsised-link {
-  display: block;
-}
-
-.kd-logo-bar {
-  flex: 1;
-}
-
 .kd-search-bar {
   flex: 2;
 }
 
-.kd-global-actions {
-  display: flex;
-  flex: 1;
-  justify-content: flex-end;
+.kd-global-action-icon {
+  color: $primary;
+  margin: .6 * $baseline-grid 0 $baseline-grid 0;
 }
 
-.kd-toolbar {
-  background-color: $content-background;
-  color: $primary;
-  height: 6 * $baseline-grid;
-  min-height: 6 * $baseline-grid;
-  padding-left: 1.75 * $baseline-grid;
-
-  .kd-global-action-icon {
-    color: $primary;
-    margin-right: $baseline-grid / 4;
-    margin-top: .6 * $baseline-grid;
-  }
+.kd-second-toolbar {
+  background: $primary;
+  box-shadow: $whiteframe-shadow-1dp;
+  height: 7 * $baseline-grid;
+  min-height: 7 * $baseline-grid;
 }
 
 .kd-system-banner {
@@ -88,10 +92,28 @@
   background-color: $warning;
 }
 
-.kd-second-toolbar {
-  box-shadow: $whiteframe-shadow-1dp;
-  height: 7 * $baseline-grid;
-  min-height: 7 * $baseline-grid;
+.kd-app-entire-content {
+  background-color: $body;
+  max-height: 100%;
+  // Move entire app content below toolbar to avoid elements overlap with
+  // shadow (there was problem with it on IE).
+  z-index: -1;
+}
+
+.kd-app-content {
+  background-color: $body;
+  height: 100%;
+  max-height: 100%;
+  // Set overflow property to disable margin-collapse, which in turn
+  // prevents scrollbar from being always visible.
+  overflow-x: hidden;
+  position: relative;
+
+  > .md-body-1 {
+    &:not(.kd-content-div-filled) {
+      padding-bottom: 4 * $baseline-grid;
+    }
+  }
 }
 
 .kd-content-div-filled {
@@ -100,12 +122,12 @@
 
 .kd-main-content-div {
   height: 100%;
-  position: absolute;
   width: 100%;
 }
 
 .kd-main-content-box {
   background-color: transparent;
+  display: flex;
   overflow-y: auto;
 }
 
@@ -123,35 +145,7 @@
   }
 }
 
-body,
-.kd-app-entire-content {
-  background-color: $body;
-  max-height: 100%;
-  // Move entire app content below toolbar to avoid elements overlap with
-  // shadow (there was propblem with it on IE).
-  z-index: 0;
-}
 
-.kd-app-content {
-  background-color: $body;
-  height: 100%;
-  max-height: 100%;
-  // Set overflow property to disable margin-collapse, which in turn
-  // prevents scrollbar from being always visible.
-  overflow-x: hidden;
-  position: relative;
-
-  >.md-body-1 {
-    &:not(.kd-content-div-filled) {
-      padding-bottom: 4 * $baseline-grid;
-    }
-  }
-}
-
-a {
-  color: $primary;
-  text-decoration: inherit;
-}
 
 .kd-success {
   color: $success-color;
@@ -165,11 +159,7 @@ a {
   color: $warning;
 }
 
-.kd-toolbar-tools {
-  height: 7 * $baseline-grid;
-  margin: auto;
-  padding-left: $baseline-grid;
-}
+
 
 .kd-text-icon {
   font-size: inherit;
