--- a/src/app/frontend/chrome/template.html
+++ b/src/app/frontend/chrome/template.html
@@ -64,7 +64,7 @@ limitations under the License.
   <div fxFlex="auto"
        fxLayout="row"
        class="kd-app-entire-content">
-    <!--<kd-nav flex="none"></kd-nav>-->
+    <kd-nav flex="none"></kd-nav>
     <div fxFlex="auto"
          class="kd-main-content-box">
       <div [ngSwitch]="loading"
