--- a/src/app/frontend/_variables.scss
+++ b/src/app/frontend/_variables.scss
@@ -79,3 +79,4 @@ $logo-width: 8 * $baseline-grid;
 $logo-height: 8 * $baseline-grid;
 $table-cell-height: 6 * $baseline-grid;
 $table-cell-height-half: $table-cell-height / 2;
+$chip-margin: 0 $baseline-grid ($baseline-grid / 2) 0;
