--- a/src/app/frontend/about/style.scss
+++ b/src/app/frontend/about/style.scss
@@ -20,6 +20,10 @@
   margin-bottom: 3 * $baseline-grid;
 }
 
+.kd-about-card {
+  padding: $baseline-grid 2 * $baseline-grid 0;
+}
+
 .kd-about-logo-icon {
   @include kd-icon-size(8 * $baseline-grid);
   @include kd-about-logo;
