--- a/src/app/frontend/styles.scss
+++ b/src/app/frontend/styles.scss
@@ -19,15 +19,7 @@
 // TODO: Remove that
 @import './common/components/actionbar/actionbar';
 
-// Globally applied/used styles should go here.
-
-.kd-no-margin {
-  margin: 0;
-}
-
-.kd-card-footer {
-  padding: 0 3 * $baseline-grid 3 * $baseline-grid;
-}
+// Globally applied/used styles should be defined in this file
 
 html, body {
   height: 100%;
@@ -39,10 +31,84 @@ a {
   text-decoration: inherit;
 }
 
+////////////////////////////////////////////
+// Custom classes used across application //
+////////////////////////////////////////////
+
+.kd-no-margin {
+  margin: 0;
+}
+
+.kd-card-footer {
+  padding: 0 3 * $baseline-grid 3 * $baseline-grid;
+}
+
+.kd-comma-separated-item {
+  display: inline-block;
+
+  &:not(:last-child) {
+    &::after {
+      content: ',';
+    }
+  }
+}
+
+.kd-pre-block {
+  margin: 0;
+  min-width: 0;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+// Style taken(mostly) from angular material md-chip style.
+.kd-chips {
+  background-color: $body;
+  border-radius: $baseline-grid;
+  display: inline-block;
+  margin: $chip-margin;
+  max-width: 100%;
+  vertical-align: bottom;
+}
+
+.kd-chip {
+  display: inline;
+  float: left;
+  max-width: 99%;
+  overflow: hidden;
+  padding: ($baseline-grid / 4) $baseline-grid;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.kd-chips-switch {
+  color: $primary;
+  cursor: pointer;
+  margin-left: -$baseline-grid / 2;
+  outline: none;
+  padding: ($baseline-grid / 4) $baseline-grid;
+}
+
+///////////////////////////////
+// Overridden default styles //
+///////////////////////////////
+
 .mat-button {
   text-transform: uppercase;
 }
 
 .mat-card {
   margin: (2.5 * $baseline-grid) (2.5 * $baseline-grid) 0;
+}
+
+// Style scrollbars on Webkit-based browsers (e.g., Chrome or Safari).
+* {
+  &::-webkit-scrollbar {
+    background: transparent;
+    height: $baseline-grid;
+    width: $baseline-grid;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $delicate;
+  }
 }
