Add i18n file and init build for closure compiler

--- a/src/app/frontend/chrome/nav/item/template.html
+++ b/src/app/frontend/chrome/nav/item/template.html
@@ -1,5 +1,5 @@
 <a mat-button
    class="kd-nav-item-button"
-   ng-class="{'kd-nav-item-active': $ctrl.isActive()}">
+   [ngClass]="{'kd-nav-item-active': isActive()}">
   <ng-content></ng-content>
 </a>
