--- a/src/app/frontend/chrome/template.html
+++ b/src/app/frontend/chrome/template.html
@@ -32,6 +32,7 @@ limitations under the License.
       <div>
         <button mat-button
                 (click)="create()"
+                i18n-matTooltip
                 matTooltip="Create an application or any Kubernetes resource"
                 class="kd-actionbar-button">
           <mat-icon class="kd-global-action-icon">add</mat-icon>
