--- a/src/app/frontend/chrome/nav/template.html
+++ b/src/app/frontend/chrome/nav/template.html
@@ -1,7 +1,7 @@
 <mat-drawer-container class="kd-nav">
   <mat-drawer class="kd-nav" mode="side">
     <div class="kd-nav-group">
-      <kd-nav-item class="kd-nav-group-item">Cluster</kd-nav-item>
+      <kd-nav-item class="kd-nav-group-item" i18n>Cluster</kd-nav-item>
       <kd-nav-item class="kd-nav-item">Namespaces</kd-nav-item>
       <kd-nav-item class="kd-nav-item">Nodes</kd-nav-item>
       <kd-nav-item class="kd-nav-item">Persistent Volumes</kd-nav-item>
