--- a/src/app/frontend/about/template.html
+++ b/src/app/frontend/about/template.html
@@ -15,14 +15,15 @@ limitations under the License.
 -->
 
 <mat-card class="kd-about-card">
+    <mat-card-title>About</mat-card-title>
   <mat-card-content>
     <mat-icon class="kd-about-logo-icon" [svgIcon]="assets.getAppLogo()"></mat-icon>
     <div class="kd-about-logo-text">
       <div class="mat-h1 kd-no-margin">Dashboard</div>
       <div class="mat-h3 kd-no-margin">General-purpose web UI for Kubernetes clusters</div>
     </div>
-    <div>Dashboard Version:</div>
-    <div>Git Commit:</div>
+    <div>App version:</div>
+    <div>Git commit:</div>
   </mat-card-content>
   <mat-card-footer class="mat-small kd-card-footer">
     <div>Copyright 2015 - {{latestCopyrightYear}} The Kubernetes Authors.</div>
