Fix license headers and add lint/formatters scripts

--- a/src/app/frontend/about/template.html
+++ b/src/app/frontend/about/template.html
@@ -15,9 +15,10 @@ limitations under the License.
 -->
 
 <mat-card class="kd-about-card">
-    <mat-card-title>About</mat-card-title>
+  <mat-card-title>About</mat-card-title>
   <mat-card-content>
-    <mat-icon class="kd-about-logo-icon" [svgIcon]="assets.getAppLogo()"></mat-icon>
+    <mat-icon class="kd-about-logo-icon"
+              [svgIcon]="assets.getAppLogo()"></mat-icon>
     <div class="kd-about-logo-text">
       <div class="mat-h1 kd-no-margin">Dashboard</div>
       <div class="mat-h3 kd-no-margin">General-purpose web UI for Kubernetes clusters</div>
