--- a/src/app/frontend/chrome/template.html
+++ b/src/app/frontend/chrome/template.html
@@ -14,9 +14,13 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<div fxLayout="column" fxFill fxFlexFill>
+<div fxLayout="column"
+     fxFill
+     fxFlexFill>
   <mat-toolbar class="kd-toolbar">
-    <div class="kd-toolbar-tools" fxLayout="row" fxFlex="auto">
+    <div class="kd-toolbar-tools"
+         fxLayout="row"
+         fxFlex="auto">
       <div class="kd-logo-bar">
         <a [href]="getOverviewStateName()"
            class="kd-toolbar-logo-link">
