--- a/src/app/frontend/index.scss
+++ b/src/app/frontend/index.scss
@@ -16,7 +16,7 @@
 @import './mixins';
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
-// TODO: Remove that
+// TODO: Remove that once component is created
 @import './common/components/actionbar/actionbar';
 
 // Globally applied/used styles should be defined in this file
