--- a/src/app/frontend/chrome/style.scss
+++ b/src/app/frontend/chrome/style.scss
@@ -61,7 +61,7 @@
 
 .kd-global-action-icon {
   color: $primary;
-  margin: 0.6 * $baseline-grid 0 $baseline-grid 0;
+  margin: .6 * $baseline-grid 0 $baseline-grid 0;
 }
 
 .kd-second-toolbar {
